# listpkgs.nuros.org

./: .gitignore  CNAME  GITBOOK_SETUP.md  README.md  docker-compose.yml  index.html  packages.json  pyproject.toml
.ci/: main.py  pyproject.toml  test_installation.py
.ci/listpkgs_aggregator/: __init__.py  aggregator.py  github_client.py  metadata_processor.py
.ci/listpkgs_aggregator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
.devcontainer/: devcontainer.json
.github/workflows/: build_frontend.yml  deploy-docs.yml  deploy_on_pages.yml  lint.yml  sync-gitbook.yml  update-list.yaml  update-list.yml
blog/: .gitignore  .prettierignore  .prettierrc  GITBOOK_SETUP.md  README.md  SUMMARY.md  api-reference.md  architecture.md  book.json  contributing.md  deployment.md  faq.md  frontend-guide.md  getting-started.md  index.old.md  package.json  pnpm-lock.yaml  styles.css
blog/.vitepress/: config.ts
docker/: backend.Dockerfile  frontend.Dockerfile
listpkgs.nuros.front-end/: .eslintrc.json  .gitignore  .stylelintrc.json  README.md  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
listpkgs.nuros.front-end/public/: repodata.json  repodata.json.sha256  test.html
listpkgs.nuros.front-end/src/: App.scss  App.tsx  index.css  index.tsx
listpkgs.nuros.front-end/src/components/: GroupedPackageList.tsx  JsonDisplay.tsx  PackageCard.tsx  SearchBar.tsx  (+3 more)
listpkgs.nuros.front-end/tests/: app.spec.ts
(+19 files in other folders)
