[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "listpkgs-aggregator"
version = "2.0.0"
description = "Aggregates package metadata from NurOS-Packages organization"
authors = [
    {name = "NurOS Team"}
]
dependencies = [
    "httpx[http2]>=0.27.0"
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "respx>=0.20.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["listpkgs_aggregator*"]
